<resources>
    <string name="app_name">Sorna</string>
    <string name="tab_user_profile">Profile</string>
    <string name="tab_categories">Category</string>
    <string name="tab_create_new_ad">New Ad</string>
    <string name="tab_search_ads">Search</string>
    <string name="tab_ads">Ads</string>
    <string name="select_category">Select Category</string>
    <string name="create_new_ad_title">Ad Title</string>
    <string name="create_new_ad_description">Ad Description</string>
    <string name="create_new_ad_phone_number">Phone Number</string>
    <string name="create_new_ad_images_limit">You cannot select more than of %1$d images</string>
    <string name="create_new_ad_folder_title">Album</string>
    <string name="create_new_ad_directory_name">Images</string>
    <string name="create_new_ad_title_validation_error">Ad title must consists at least %1$d characters</string>
    <string name="create_new_ad_description_validation_error">Ad description must consists at least %1$d characters</string>
    <string name="create_new_ad_phoneNumber_validation_error">Phone number is not valid(example: 09371231234)</string>
    <string name="create_new_ad_price_validation_error">Ad price cannot be less than of 100</string>
    <string name="create_new_ad_category_validation_error">Select a category for your ad</string>
    <string name="storage_permission_title">Select ad images</string>
    <string name="storage_permission_message">We need permission of access Storage to select Ad images</string>
    <string name="storage_permission_grant">Grant Permission</string>
    <string name="storage_permission_deny">Dismiss</string>
    <string name="create_new_ad_post_button">Post Ad</string>
    <string name="create_new_ad_posting_ad">Posting Ad, please wait</string>
    <string name="create_new_ad_successful">Ad posted successfully</string>
    <string name="create_new_ad_failed">Error posting ad, please try again later</string>
    <string name="create_new_ad_price">Price</string>
    <string name="time_to_moment_now">Just now</string>
    <string name="time_to_moment_one_minute_ago">less than a minute</string>
    <string name="time_to_moment_some_minutes_ago">%1$d minutes</string>
    <string name="time_to_moment_one_hour_ago">One hour ago</string>
    <string name="time_to_moment_some_hours_ago">%1$d hours</string>
    <string name="time_to_moment_yesterday">yesterday</string>
    <string name="time_to_moment_some_days_ago">%1$d days</string>
    <string name="search_ads_input_hint">Search Ads</string>
    <string name="profile_user_ads">My Ads</string>
    <string name="saved_ads">Saved Ads</string>
    <string name="user_ads_show_details">Ad details</string>
    <string name="user_ads_delete">Delete</string>
    <string name="auth_enter_into_sorna">Log into Sorna</string>
    <string name="auth_signin_by_google_account">Log in by Google Account</string>
    <string name="auth_sorna_description">An app that allows users to buy from and sell to with others locally.</string>
    <string name="network_error">Unable to connect to the server, please try again later</string>
    <string name="auth_exit_app">Log out of Sorna</string>
    <string name="auth_cancel_signin">Cancel, I won\'t Log in</string>
    <string name="log_out">Log out</string>
    <string name="ads_toolbar_title">Recent Ads</string>
    <string name="categories_toolbar_title">Categories</string>
    <string name="user_advertisements">User\'s Ads</string>
    <string name="user_account">User Account</string>
    <string name="user_saved_ads_toolbar_title">Saved Ads</string>
    <string name="user_advertisements_toolbar_title">My Ads</string>
    <string name="ad_details_description_title">Description</string>
    <string name="ad_details_call_to_ad_owner">Call</string>
    <string name="create_new_ad_toolbar_title">Create new Ad</string>
    <string name="create_new_ad_images_error">Select at least 1 image</string>
    <string name="network_error_retry">Try again</string>
    <string name="ads_list_is_empty">There is no Ad yet, Create the first one</string>
    <string name="search_ads">Input part of Ad title or description</string>
    <string name="search_ads_empty">Sorry, nothing found</string>
    <string name="saved_ads_empty">You have not sent any Ads yet</string>
    <string name="user_ads_empty">You have not saved any Ads yet</string>
    <string name="app_settings">App Settings</string>
    <string name="categorized_ads_empty">There is no Ad for this Category</string>
    <string name="app_language">Application Language</string>
    <string name="app_language_persian">Persian</string>
    <string name="app_language_english">English</string>
    <string name="night_mode">Night Mode</string>
</resources>