<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="io.github.masterj3y.sorna.feature.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="32dp"
        tools:context=".feature.auth.AuthActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_ils_login"
                android:drawablePadding="16dp"
                android:gravity="center"
                android:text="@string/auth_enter_into_sorna" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/auth_sorna_description" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:invisible="@{viewModel.loading}"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/auth_exit_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:invisible="@{!viewModel.loading}"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/auth_cancel_signin"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:invisible="@{viewModel.loading}"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/auth_signin_by_google_account"
            app:layout_constraintBottom_toTopOf="@id/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gone="@{!viewModel.loading}"
            app:layout_constraintBottom_toBottomOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="@+id/signIn"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toTopOf="@+id/signIn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>