<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="adapter"
            type="io.github.masterj3y.sorna.feature.ad.ads.AdsAdapter" />

        <variable
            name="viewModel"
            type="io.github.masterj3y.sorna.feature.ad.ads.AdsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentInsetStart="0dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/ToolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/ads_toolbar_title" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:refreshing="@{viewModel.loading}">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{adapter}"
                    android:bindAdsList="@{viewModel.ads}"
                    android:gone="@{viewModel.loading || viewModel.error != null}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_ad"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gone="@{viewModel.error==null}"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/NetworkError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/retry"
                        style="@style/OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/network_error_retry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:gone="@{!viewModel.ads.empty || viewModel.error != null}"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/EmptyData"
                        android:drawablePadding="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/createNewAd"
                        style="@style/OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/tab_create_new_ad" />
                </LinearLayout>
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</layout>